[project]
name = "pypoller"
version = "0.1.0"
description = "Lightweight polling and notification framework"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"