[project]
name = "pypoller"
version = "0.1.0"
description = "Lightweight polling and notification framework"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["dependencies"]
authors = [{name = "Mohit Chauhan", email = "mhchauhan3@gmail.com"}]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"