[project]
name = "pypoller"
version = "0.1.6"
description = "Lightweight polling and notification framework"
readme = "README.md"
authors = [{name = "Mohit Chauhan", email = "mhchauhan3@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.9"
dependencies = [
	"requests",
	"playwright",
	"twilio",
	"typing_extensions",
	"python-dotenv",
	"rocketchat_API"
]

[project.urls]
"Homepage" = "https://www.mohitc.com/pypoller"
"Source" = "https://github.com/mchauhan3/pypoller"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"